crates/doop/tests/compile_fail/not_really_a_variable.rs
use doop::doop;

fn main() {
    doop! {
        for N in [1, 2, 3] {
            let n = N;
            println!("{n}");
            println!("{N}");
        }
    }
}
